<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">Tweety Bird</string>

    <!-- Login -->
    <string name="login_label">Connect to Twitter</string>

    <!-- Timeline -->
    <string name="title_activity_timeline">Home</string>
    <string name="action_compose">Compose</string>
    <string name="error_internet">No internet connection.</string>

    <!-- Compose -->
    <string name="compose_title">New Tweet</string>
    <string name="tweet">Tweet</string>
    <string name="tweet_hint">What\'s happening?</string>
    <string name="char_max">140</string>
    <string name="cancel">cancel</string>
    <string name="profile_pic_description">Profile picture</string>
    <string name="drafts_description">Saved drafts</string>
    <string name="save_draft">Save draft?</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>

    <!-- Drafts -->
    <string name="title_activity_drafts">Drafts</string>

    <!-- Tweet Detail -->
    <string name="title_activity_tweet_detail">Tweet</string>

    <!-- Profile -->
    <string name="title_activity_profile">@string/profile</string>
    <string name="profile">Profile</string>

    <!-- Search -->
    <string name="title_activity_search">@string/search</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Twitter</string>

</resources>